--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <div hidden align="center" id="opbar" class="statbarop">
     <h2>Settings:</h2>
     <hr>
-    <a href="/register.html">Register</a>
-    <a href="/login.html">Login</a>
+    <a href="./register.html">Register</a>
+    <a href="./login.html">Login</a>
     <button onclick="closebar()">Close</button>
 </div>
 <div hidden id="clickergame">
